# ForestRendering

./: .gitattributes  .gitignore  0001-Fix-GLM-version.patch  0001-disable-assimp-werror-apple.patch  BUILD.rst  CMakeLists.txt  README.rst  build.bat
CMake/: InstallAssimp.cmake  InstallGLFW.cmake  InstallGLM.cmake  RetrieveResourceArchive.cmake  patch.cmake
docs/: vk-file-implementation-map.md  vulkan-final-architecture.md  vulkan-migration-plan-2026-05-31.md  weekly-sprint-2026-04-12-to-04-18.md
glm-0.9.9.5/: CMakeLists.txt
res/: 09_shader_base.slang  09_shader_base.spv
shaders/: Gbuffer.frag  Gbuffer.vert  SSAOShader.frag  SSAOShader.vert  SSAOblur.frag  default.frag  default.vert  forestTest.frag  forestTest.vert  grass.frag  grass.vert  ligihtContribution.frag  ligihtContribution.vert  particle.frag  particle.vert  resolve_deferred.frag  resolve_deferred.vert  shadowDepth.frag  shadowDepth.vert  skybox.frag  skybox.vert  suntest.frag  terrain.frag  terrain.tcs  terrain.tes  terrain.vert  tree.frag  tree.vert  volumetricLight.frag  wave.frag  wave.vert
shaders/vk/: lighting.slang  mesh.frag  mesh.frag.slang  mesh.slang  mesh.vert  mesh.vert.slang  mesh_gbuffer.slang  shadow_mesh.slang  shadow_terrarin.slang  skybox.frag  skybox.vert  terrain.slang  terrain_gbuffer.slang  volumetric.slang
src/: ForestScene.cpp  ForestScene.hpp  main.cpp  vk_main.cpp  vk_main.hpp
src/core/: CMakeLists.txt  FPSCamera.inl  WindowManager.cpp  helpers.cpp  helpers.hpp  node.cpp  node.hpp  parametric_shapes.cpp  parametric_shapes.hpp
src/vk/core/: VkContext.cpp  VkContext.hpp  VkFrameSync.cpp  VkFrameSync.hpp  VkSwapchain.cpp  VkSwapchain.hpp  vk_dispatch.cpp
src/vk/features/gbuffer/: GBufferPass.cpp  GBufferPass.hpp
src/vk/features/geometry/: GeometryPass.cpp  GeometryPass.hpp
src/vk/features/lighting/: LightingPass.cpp  LightingPass.hpp
src/vk/features/mesh/: MeshPass.cpp  MeshPass.hpp
src/vk/features/post/: PostProcessPass.cpp  PostProcessPass.hpp
src/vk/features/shadow/: ShadowPass.cpp  ShadowPass.hpp
src/vk/features/skybox/: SkyboxPass.cpp  SkyboxPass.hpp
src/vk/features/terrain/: TerrainPass.cpp  TerrainPass.hpp
src/vk/features/ui/: ImGuiPass.cpp  ImGuiPass.hpp
src/vk/features/volumetric/: VolumetricLightPass.cpp  VolumetricLightPass.hpp
src/vk/renderer/: FrameContext.hpp  FrameGlobals.hpp  IRenderPass.cpp  IRenderPass.hpp  RenderTargets.hpp  VkRenderer.cpp  VkRenderer.hpp  helper.hpp
src/vk/scene/: Model.cpp  Model.hpp  Vertex.hpp  common.hpp
